# HW

./: .gitignore  Cargo.toml  Makefile  README.md  avr-atmega328p.json  build.rs  link.x  output.elf  output.hex  to_makefile.txt
.cargo/: config.toml
src/: atmega.rs  gpio.rs  main.rs  spi.rs  usart.rs
