[package]
name = "simple_blink"
version = "0.1.0"
edition = "2021"

[profile.release]
panic = "abort"
opt-level = "z"

[profile.dev]
opt-level = "z"

[build]
target = "avr-atmega328p.json"

[dependencies]
cortex-m-rt = "0.7.3"

[unstable]
build-std = ["core"]

[target.avr-atmega328p]
linker = "avr-gcc"
rustflags = [
    "-C", "link-arg=-nostartfiles",
    "-C", "link-arg=-nodefaultlibs",
    "-C", "link-arg=-Wl,--gc-sections",
    "-C", "link-arg=-Wl,-z,noexecstack",
]
