[package]
authors = ["Nizar"]
edition = "2018"
readme = "README.md"
name = "GPIO"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"



# Uncomment for the panic example.
# panic-itm = "0.4.1"
# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"
# Uncomment for the device example.
# Update memory.x, set target to thumbv7em-none-eabihf in .cargo/config,
# and then use cargo build --example device to build it.
# [dependencies.stm32f3]
# features = ["stm32f303", "rt"]
# version = "0.7.1"
# this lets you use cargo fix!


[[bin]]
name = "atmega"
path = "src/atmega.rs"
# Définir la cible pour AVR Atmega328P


[[bin]]
name = "thumbv7"
path = "src/main.rs"
# Définir la cible pour ARM Cortex-M (STM32, etc.)


[profile.release]
codegen-units = 1
debug = true
lto = true
panic = 'abort'